# renovation

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yml
.qlty/: qlty.toml
docs/: demo_config.yml
docs/demo_configs/: all_elements.yml  all_elements_auto_wall_dim.yml  anchors.yml  doors_and_windows.yml  room_tests.yml  simple_floor_plan.yml  simple_floor_plan_auto_wall_dim.yml
examples/all_options/: all_options.yml
examples/elements/: all_elements.yml
examples/playground/: doors_and_windows.yml
examples/simple_no_rooms/: simple_floor_plan.yml
examples/templates/rooms/play_with_doors/: project_main.yml  room.yml
examples/templates/rooms/room_east/: room.yml
examples/templates/rooms/room_north/: room.yml
examples/templates/rooms/room_south/: project_main.yml  room.yml
examples/templates/rooms/room_west/: project_main.yml  room.yml
floor_planner/: __main__.py  floor_plan.py  markdown_report.py  project.py  utils.py  variables.py
floor_planner/elements/: basic.py  door.py  electricity.py  element.py  lighting.py  multipurpose.py  room.py
renovation/: __init__.py  __main__.py  constants.py  elements.py  floor_plan.py  project.py  utils.py  variables.py
renovation/elements/: __init__.py  anchor_mixins.py  basic.py  door.py  electricity.py  element.py  info.py  lighting.py  multipurpose.py  options.py  registry.py  room.py  wall_window_door.py
requirements/: base.txt  constraints.txt  test.txt
tests/: conftest.py  test_main.py
