[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "floor_planner"
version = "0.2.0"
description = "Drawing tool that produces floor plans or area plans. Extended fork with constants, variables, multiple YAML files, rooms, and more."
readme = "README.md"
keywords = ["apartments", "floor_plan", "floor_plans", "area_plan", "architectural_drawing", "interior_design"]
urls = {Homepage = "https://github.com/krzysztofander/floor-planner"}
authors = [
    {name = "Krzysztof Bartczak", email = "krzysztof.bartczak@gmail.com"},
    {name = "Nikolay Lysenko", email = "nikolay-lysenco@yandex.ru"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Graphics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3"
]
requires-python = ">= 3.8"
dependencies = [
    "matplotlib",
    "numpy",
    "PyYAML",
]

[tool.setuptools]
packages = [
    "floor_planner",
    "floor_planner.elements"
]
